--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "repository": "git@github.com:lfca-earth/nextjs-utils.git",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc --project tsconfig.json",
     "lint:fix": "yarn lint --fix",
