--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
 {
-  "extends": "ts-config-lfca/nextjs",
+  "extends": "ts-config-lfca/npm-module",
   "compilerOptions": {
-    "declaration": true,
-    "noEmit": false
-  }
+    "baseUrl": ".",
+    "outDir": "./dist",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "exclude": ["node_modules"],
+  "include": ["src/**/*.ts"]
 }
