--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "loglevel": "1.8.1",
+    "loglevel-plugin-prefix": "0.8.4",
     "superstruct": "1.0.3"
   },
   "peerDependencies": {
